Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.0.6 =
-------------------------------------------------
* Fixed: Remove inclusion of CP assets on none CP pages.
* Fixed a problem with change WooCommerce product status to "Out of stock".
* Fixed a problem with modules when section is deleted.
* Fixed untranslated texts.
* Fixed a problem with sale price in MarketPress.
* To avoid confusion, we changed label "Duration" to "Time Limit".
* Fixed a problem with too tall TinyMCE editoor.
* Unified all TinyMCE editors.
* Improved process of saving answers.
* Fixed a bug with missing grade for manualy graded fields when we use "Save & Exit" feature.
* Improved message about required units.
* Fixed too many redirects error.
* Added redirect to login page on student settings page for non-logged users.
* Fixed issue with not showing HTML tags in Multiple/Single Choice field.
* Updated included Market Press version 3.2.3
* Fixed a problem with ignoring "User also needs to pass all required assessments" unit option.
* Added "Number of failed attempts".
* Improved message box for MarketPress on paid course.
* Fixed "Passing Grade" value one assessments page.
* Added checks for user related functions to avoid processing when there is no logged user.

= 2.0.5 =
-------------------------------------------------
* Fixed errors with PHP 7.1.1.
* Added HTML preview for Raports.
* Added ability to turn on/off social sharing icons.
* Added check is safe_mode before call set_time_limit() function.
* Added the action "coursepress_woocommerce_product_updated". This action has two variable $product_id and $course_id and is called after update product by CoursePress.
* Added check is user logged before we show comment form in discussion module.
* Added CoursePress Endpoints to Apperance -> Menu screen.